--- a/src/index.css
+++ b/src/index.css
@@ -321,12 +321,12 @@ body {
   position: absolute;
   top: 0.6rem;
   left: 0.6rem;
-  height: 3.2rem;
+  height: 3rem;
   aspect-ratio: 1;
   border-radius: 50%;
   border: none;
-  /* background-color: var(--color-text); */
-  background-color: #fff;
+  padding-bottom: 5px;
+  background-color: var(--color-text);
   color: var(--color-background-500);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
   font-family: sans-serif;
